k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-demo-app-svc
spec:
  type: NodePort
  selector:
    app: cicd-demo-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
