k8s-manifests/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: harness-aspire-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harness-aspire-vs
spec:
  hosts:
    - '*'
  gateways:
    - harness-aspire-gateway
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            host: harness-aspire-demo-svc
            port:
              number: 80
